# Autonomous-Multi-Agent-Code-Generation-Platform

./: .gitignore  pyproject.toml
src/engineering_team/: crew.py  main.py
src/engineering_team/config/: agents.yaml  tasks.yaml
