[project]
name = "engineering_team"
version = "0.1.0"
description = "engineering_team using crewAI"
authors = [
    { name = "Your Name", email = "you@example.com" }
]
requires-python = ">=3.10,<3.13"

dependencies = [
    "crewai==1.12.2",
    "gradio>=4.0.0",
    "python-dotenv>=1.0.0"
]

[project.scripts]
engineering_team = "engineering_team.main:run"
run_crew = "engineering_team.main:run"
train = "engineering_team.main:train"
replay = "engineering_team.main:replay"
test = "engineering_team.main:test"
run_with_trigger = "engineering_team.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

# 🔥 IMPORTANT: Prevent incompatible packages like lancedb
[tool.uv]
required-environments = [
    "sys_platform == 'win32' and platform_machine == 'AMD64'"
]